PR/51777: David Binderman: Remove unused computation